1oA2vVHP deleted deactivate button, added editmode for all the fields, added swagger tags for documentation
